Version 1.1.1:
 * campaigns
   * reordered ranks to reflect relevance to game world
   * new (beginner) campaign: Two Brothers
   * Heir to the Throne
     * Gryphons are not available until you find dwarves to ride them
     * Fixed behavior of sleeping gryphons in Gryphon Mountain
     * Changed confusing dialog on Home of the North Elves (#5006)
     * Standardized wording for bonus victory objectives
     * Lost General map now slightly more friendly to smallfoot units
     * Sceptre of Fire - more villages and dirt road near starting castle
     * Underground scenarios generally more interesting/enhanced story
     * Text cleanups
   * The Rise of Wesnoth
     * replaced Sea Orc with Naga Fighter in Final Spring, Clearwater Port, and
       Rise of Wesnoth
     * Fire dragon is a level 5 unit
     * Text cleanups
   * migrated unique units, scenarios, maps, and images to data/campaigns
 * campaign server
   * changed default port for campaign server to 15003 to separate 1.1 and 1.0
 * gameplay changes:
   * improved default weapon selection on player attack (patch #500)
   * attack_weight=0 disables the attack when attacking
   * defense_weight=0 disables the attack when defending
   * attack_weight is now functional (#5014)
   * added a new terrain "Mushroom Grove" (id=fungus)
   * changed several terrains to be "mixed", having worst movement and best
     defense: Snow Forest, Snow Hill, Dunes (renamed from Desert Hill)
   * added new schedule: deep underground (-30%, very dark)
 * graphics:
   * New castle tiles
   * New sand tiles
   * New terrain: Rockbound Cave, Mushroom Grove, Illuminated Cave Floor,
     Great Tree.
   * Added Drake, Gladiator, Enforcer, Slasher and Warden death animations.
     All Drake unit baselines fixed
   * Added item bones.png
 * language and i18n:
   * new translations: Indonesian
   * new manual: Indonesian
   * updated translations: British English, Chinese, German, Hebrew, Italian,